cmake_minimum_required(VERSION 3.28)
project(_NEW_LaboratorOOP_9_10)

set(CMAKE_CXX_STANDARD 17)

add_executable(_NEW_LaboratorOOP_9_10 main.cpp
        Produs.cpp
        Produs.h
        Teste.cpp
        Teste.h
        Magazin.cpp
        Magazin.h
        Service.cpp
        Service.h
        UI.cpp
        UI.h
        MagazinFile.cpp
        MagazinFile.h
        Exceptie.cpp
        Exceptie.h
        Validator.cpp
        Validator.h)
